Small fixes and optimizer test support for prunability